backend: added security description to api docs
